Tue Oct 08 02:29:28 GMT 2013  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Use croak_sv() or ERRSV if defined.

Sun Oct 06 23:48:07 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Don't prefer ruby1.8 to ruby when looking for a ruby
	  interpreter - these days it's more likely to ignore ruby 1.9 rather
	  than avoid picking ruby 1.6.

Fri Oct 04 00:32:38 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Don't run postingsource testcase under
	  threads for now as it segfaults for unknown reasons.

Fri Oct 04 00:29:04 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py,python3/smoketest.py,python3/util.i: Drop the
	  deprecated 'MSet.items' and 'ESet.items' for Python3 - people are
	  going to need to make code updates anyway, so keeping existing code
	  working unchanged isn't a realistic concern.
	* python3/docs/index.html: Drop discussion of removed features.

Fri Oct 04 00:27:13 GMT 2013  Olly Betts <olly@survex.com>

	* README: Document 3.2 as the minimum supported Python3 version, and
	  update the status to "mostly functional".

Thu Oct 03 23:51:26 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,python/,python3/: Provide bindings version in
	  xapian.__version__ as per PEP 396.  (see #346)

Sat Sep 28 00:02:21 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Fix test_postingsource testcase.

Fri Sep 27 23:37:28 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Fix test_allterms_iter testcase.

Fri Sep 27 23:37:01 GMT 2013  Olly Betts <olly@survex.com>

	* python3/extra.i: Fix ValueStreamIter.__next__().

Fri Sep 27 23:36:23 GMT 2013  Olly Betts <olly@survex.com>

	* python3/extra.i: Correct comments for next() changes in Python3.

Fri Sep 27 23:28:47 GMT 2013  Olly Betts <olly@survex.com>

	* python3/testsuite.py: Remove unnecessary next() helper from
	  testsuite.py.

Fri Sep 27 23:28:20 GMT 2013  Olly Betts <olly@survex.com>
